# haskell-airplane

./: .cspell.json  .gitignore  Makefile  README.md  cabal.config  cabal.project  cabal.project.freeze  example.cabal  flake.nix  fourmolu.yaml
.github/workflows/: main.yaml
app/: Main.hs
dev/: download-dependencies
