cabal-version:      3.0
name:               example
version:            0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Kazuki Okamoto (岡本和樹)
maintainer:         kazuki.okamoto@kakkun61.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4 && <5,
                      either-result
    hs-source-dirs:   app
    default-language: Haskell2010
